# Practica-3-Grafica

./: CMakeLists.txt  README.md  escenas.cpp  escenas.h  main.cpp  primitivas.cpp  primitivas.h  shader.vert
informe/: informe.aux  informe.out  informe.tex  informe.toc
